# srt-server

./: .gitignore  CMakeLists.txt  README.md  core.cpp  handlers.cpp  main.cpp  main.h  server.cpp  var_defs.cpp
headers/: main.h  source.h  srtconfig.h  srtinstance.h  structs.h
source/: core.cpp  environment.cpp  main.cpp  source.cpp  srtinstance.cpp  srtroom.cpp
